[gd_scene load_steps=44 format=3 uid="uid://dcg5q7p21m3pd"]

[ext_resource type="Script" path="res://scripts/npc_bt.gd" id="1_1fpsg"]
[ext_resource type="PackedScene" uid="uid://bu4761byp6ssw" path="res://scenes/Arrow.tscn" id="2_bqnf1"]
[ext_resource type="PackedScene" uid="uid://bw2v62wudoeux" path="res://behaviourtrees/npc_ai.tscn" id="2_nin16"]
[ext_resource type="Script" path="res://scripts/NavAgentComponent.gd" id="3_ycoso"]
[ext_resource type="Texture2D" uid="uid://xduuyikssqaj" path="res://art/Units/MainCharacter.png" id="4_lo1sa"]
[ext_resource type="Texture2D" uid="uid://c2xuyysdmywfk" path="res://art/Units/purple_character.png" id="5_5q4q8"]
[ext_resource type="Texture2D" uid="uid://cft4h1ehdqqy" path="res://art/Units/character_outside.png" id="6_kjk2m"]
[ext_resource type="Texture2D" uid="uid://dyhwshhr60jao" path="res://art/Units/character_inside.png" id="7_5deju"]
[ext_resource type="Texture2D" uid="uid://dhtxcck2y2xn6" path="res://art/Units/hand.png" id="8_ex71x"]
[ext_resource type="Texture2D" uid="uid://cypv5cjj4ekxv" path="res://art/items/weapon_dagger.png" id="9_navur"]
[ext_resource type="Texture2D" uid="uid://djrnqc3off2p0" path="res://art/items/shield_curved.png" id="10_ed4y7"]
[ext_resource type="Texture2D" uid="uid://bjtg4nol71csr" path="res://art/items/shield_straight.png" id="11_l125k"]
[ext_resource type="Texture2D" uid="uid://blppinod03mhu" path="res://art/items/weapon_arrow.png" id="12_wmxx6"]
[ext_resource type="Texture2D" uid="uid://bfwyeje7ro3ij" path="res://art/items/weapon_axe.png" id="13_r7gf3"]
[ext_resource type="Texture2D" uid="uid://lgquqbe0c1jf" path="res://art/items/weapon_axe_blades.png" id="14_2nste"]
[ext_resource type="Texture2D" uid="uid://cwxlo738qc7pf" path="res://art/items/weapon_axe_double.png" id="15_ujod0"]
[ext_resource type="Texture2D" uid="uid://b4kwxwv7dfo7u" path="res://art/items/weapon_axe_large.png" id="16_ns5pn"]
[ext_resource type="Texture2D" uid="uid://3avqlagjisyt" path="res://art/items/weapon_bow.png" id="17_nlmmn"]
[ext_resource type="Texture2D" uid="uid://cvll8jvy4aoyo" path="res://art/items/weapon_bow_arrow.png" id="18_jy5kl"]
[ext_resource type="Texture2D" uid="uid://3gyrqskbfmv6" path="res://art/items/weapon_hammer.png" id="19_qwa13"]
[ext_resource type="Texture2D" uid="uid://bh8ketjwmsf7g" path="res://art/items/weapon_longsword.png" id="20_nax8r"]
[ext_resource type="Texture2D" uid="uid://dlr8abh36j1e1" path="res://art/items/weapon_pole.png" id="21_fre1r"]
[ext_resource type="Texture2D" uid="uid://bs2f6yv2xdfox" path="res://art/items/weapon_spear.png" id="22_2wtf5"]
[ext_resource type="Texture2D" uid="uid://biw4qv1lxxb7t" path="res://art/items/weapon_staff.png" id="23_dedi6"]
[ext_resource type="Texture2D" uid="uid://dmiss4mu4v2qb" path="res://art/items/weapon_sword.png" id="24_gqvs1"]
[ext_resource type="FontFile" uid="uid://djhfqg84rk38a" path="res://font/PipersPlayroom-2OP1K.ttf" id="26_7rijv"]
[ext_resource type="Script" path="res://scripts/npc_audio.gd" id="26_h2mta"]
[ext_resource type="AudioStream" uid="uid://d1p0ybbttst0j" path="res://audio/attack/attack_1.ogg" id="27_humjx"]
[ext_resource type="AudioStream" uid="uid://dhnipi1f3s3hq" path="res://audio/attack/attack_2.ogg" id="28_wrjjj"]
[ext_resource type="AudioStream" uid="uid://y165sonhir70" path="res://audio/take_dmg/hurt_1.ogg" id="29_p3175"]
[ext_resource type="AudioStream" uid="uid://cogkxic4832e6" path="res://audio/take_dmg/hurt_2.ogg" id="30_nr7mx"]
[ext_resource type="AudioStream" uid="uid://jxhqww61ixt6" path="res://audio/death/death_1.ogg" id="31_7txrx"]
[ext_resource type="AudioStream" uid="uid://b3sbhgkowouhd" path="res://audio/death/death_2.ogg" id="32_i2j54"]

[sub_resource type="SpriteFrames" id="SpriteFrames_xiknj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_navur")
}, {
"duration": 1.0,
"texture": ExtResource("10_ed4y7")
}, {
"duration": 1.0,
"texture": ExtResource("11_l125k")
}, {
"duration": 1.0,
"texture": ExtResource("12_wmxx6")
}, {
"duration": 1.0,
"texture": ExtResource("13_r7gf3")
}, {
"duration": 1.0,
"texture": ExtResource("14_2nste")
}, {
"duration": 1.0,
"texture": ExtResource("15_ujod0")
}, {
"duration": 1.0,
"texture": ExtResource("16_ns5pn")
}, {
"duration": 1.0,
"texture": ExtResource("17_nlmmn")
}, {
"duration": 1.0,
"texture": ExtResource("18_jy5kl")
}, {
"duration": 1.0,
"texture": ExtResource("19_qwa13")
}, {
"duration": 1.0,
"texture": ExtResource("20_nax8r")
}, {
"duration": 1.0,
"texture": ExtResource("21_fre1r")
}, {
"duration": 1.0,
"texture": ExtResource("22_2wtf5")
}, {
"duration": 1.0,
"texture": ExtResource("23_dedi6")
}, {
"duration": 1.0,
"texture": ExtResource("24_gqvs1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_6ehp3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RightHand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(13, 19)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightHand:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RightHand:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RightHand:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(13, 19)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RightHand/WeaponSprite:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_ak6fj"]
resource_name = "punch"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RightHand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.8, 1),
"transitions": PackedFloat32Array(1, 0.307786, 1, 1, 1),
"update": 0,
"values": [Vector2(13, 19), Vector2(15, 13), Vector2(38, 8), Vector2(31, 8), Vector2(14, 14)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightHand:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1.2, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.75, 0.75), Vector2(0.5, 0.5)]
}

[sub_resource type="Animation" id="Animation_f01fe"]
resource_name = "shoot"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RightHand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.7, 0.8, 1),
"transitions": PackedFloat32Array(1, 0.34151, 8.87655, 1, 1.68179, 1),
"update": 0,
"values": [Vector2(13, 19), Vector2(18, 7), Vector2(14, 6), Vector2(19, 6), Vector2(17.3333, 8.33333), Vector2(14, 13)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightHand/WeaponSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.7, 1),
"transitions": PackedFloat32Array(1, 0.34151, 8.87655, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(1, 1.5), Vector2(1, 1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_h4qwy"]
resource_name = "swing"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RightHand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7, 0.8, 1),
"transitions": PackedFloat32Array(1, 0.108819, 1, 1, 1),
"update": 0,
"values": [Vector2(13, 19), Vector2(8, 25), Vector2(31, -18), Vector2(31, -18), Vector2(14, 12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightHand:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7, 0.8, 1),
"transitions": PackedFloat32Array(1, 0.34151, 1, 1, 1),
"update": 0,
"values": [0.0, 0.846485, -1.2706, -1.2706, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RightHand:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.75, 0.75), Vector2(0.5, 0.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x7488"]
_data = {
"RESET": SubResource("Animation_6ehp3"),
"punch": SubResource("Animation_ak6fj"),
"shoot": SubResource("Animation_f01fe"),
"swing": SubResource("Animation_h4qwy")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_shg6q"]
radius = 1000.0

[sub_resource type="CircleShape2D" id="CircleShape2D_llk2g"]
radius = 20.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qmg17"]
bg_color = Color(0.121569, 0.121569, 0.121569, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d86oh"]
bg_color = Color(0.360784, 0.682353, 0.443137, 1)

[node name="npcbt" type="Node2D"]
script = ExtResource("1_1fpsg")
size = 3500
arrow_scene = ExtResource("2_bqnf1")

[node name="NpcAi" parent="." node_paths=PackedStringArray("actor") instance=ExtResource("2_nin16")]
enabled = false
tick_rate = 4
actor = NodePath("..")

[node name="NavAgentComponent" type="NavigationAgent2D" parent="." node_paths=PackedStringArray("actor")]
path_desired_distance = 10.0
debug_enabled = true
script = ExtResource("3_ycoso")
actor = NodePath("..")

[node name="SpriteHolder" type="Node2D" parent="."]

[node name="ArrowSpawnMarker" type="Marker2D" parent="SpriteHolder"]
position = Vector2(40, 5)

[node name="Polygon2D" type="Polygon2D" parent="SpriteHolder"]
polygon = PackedVector2Array(-1, -1, -1, 1, 1, 1, 1, -1)

[node name="Sprite2D" type="Sprite2D" parent="SpriteHolder"]
visible = false
texture = ExtResource("4_lo1sa")

[node name="PurpleCharacter" type="Sprite2D" parent="SpriteHolder"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_5q4q8")

[node name="CharacterOutside" type="Sprite2D" parent="SpriteHolder"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_kjk2m")

[node name="CharacterInside" type="Sprite2D" parent="SpriteHolder"]
unique_name_in_owner = true
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_5deju")

[node name="LeftHand" type="Sprite2D" parent="SpriteHolder"]
unique_name_in_owner = true
position = Vector2(15, -11)
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_ex71x")

[node name="RightHand" type="Sprite2D" parent="SpriteHolder"]
unique_name_in_owner = true
position = Vector2(13, 19)
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_ex71x")

[node name="WeaponSprite" type="AnimatedSprite2D" parent="SpriteHolder/RightHand"]
unique_name_in_owner = true
position = Vector2(20, -2.27374e-13)
rotation = 1.57294
sprite_frames = SubResource("SpriteFrames_xiknj")
frame = 9

[node name="AttackAnimationPlayer" type="AnimationPlayer" parent="SpriteHolder"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_x7488")
}

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="ScanRegion" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScanRegion"]
shape = SubResource("CircleShape2D_shg6q")
debug_color = Color(0.619608, 0.478431, 0.643137, 0.419608)

[node name="HitBox" type="Area2D" parent="."]
visible = false
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_llk2g")
debug_color = Color(0.368627, 0.521569, 0.858824, 0.419608)

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -18.0
offset_top = 25.0
offset_right = 371.0
offset_bottom = 52.0
scale = Vector2(0.095, 0.095)
theme_override_styles/background = SubResource("StyleBoxFlat_qmg17")
theme_override_styles/fill = SubResource("StyleBoxFlat_d86oh")
value = 100.0
show_percentage = false

[node name="name_label" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -62.0
offset_right = 480.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("26_7rijv")
theme_override_font_sizes/font_size = 60
text = "name"
horizontal_alignment = 1

[node name="npc_audio" type="AudioStreamPlayer2D" parent="."]
script = ExtResource("26_h2mta")
attack_streams = Array[AudioStream]([ExtResource("27_humjx"), ExtResource("28_wrjjj")])
hurt_streams = Array[AudioStream]([ExtResource("29_p3175"), ExtResource("30_nr7mx")])
death_streams = Array[AudioStream]([ExtResource("31_7txrx"), ExtResource("32_i2j54")])

[connection signal="area_shape_entered" from="ScanRegion" to="." method="_on_scan_region_area_shape_entered"]
[connection signal="area_shape_exited" from="ScanRegion" to="." method="_on_scan_region_area_shape_exited"]
